--- a/newEgg.html
+++ b/newEgg.html
@@ -2,11 +2,21 @@
 <html>
 <head>
 <title>Eggs recipe</title>
+<style>
+  .test{
+    color:blue;
+    font-size:16px;
+  }
+</style>
+
+
+
 </head>
 
 <body>
 
 <<h1>hi</h1>
-
+<div class="test">
+testing</div>
   </body>
   </html>
