--- a/newEgg.html
+++ b/newEgg.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Eggs recipe</title>
+<title>Egg Recipe</title>
 <style>
-  .test{
-    color:blue;
-    font-size:16px;
-  }
+ body{background-color:beige;
+height:100%;
+width: 100vw;}
+
+.white{ background-color: white;
+width: 100%;
+height: 100%;
+max-width: 1280px;
+margin: 80px;
+border-radius: 20px;
+padding: 10px;
+}
+.image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  padding: 10px;
+}
+h2{
+  font-family:sans-serif;
+  font-size:small;
+}
+.lavender{
+        background-color:bisque;
+      width: 1200px;
+    height: 200px;
+  border-radius: 20px;
+margin-left: auto;
+margin-right: auto;}
+
+
 </style>
-
-
-
 </head>
+  <body>
 
-<body>
 
-<<h1>hi</h1>
-<div class="test">
-testing</div>
-  </body>
-  </html>
+    <div class="white">
+    <img src="image-omelette.jpeg" alt="an omelette" class="image" height="200px";width="900px";
+    margin-left:auto; margin-right:auto";>
+<h1> Simple Omelette Recipe </h1>
+<h2>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</h2>
+
+<div class="lavender">
+
+
+</div>
+</body>
+</html>
