--- a/Eggs recipe .html
+++ b/Eggs recipe .html
@@ -6,7 +6,7 @@
 
 <body>
 <div>
-<img src="https://static.vecteezy.com/system/resources/previews/030/194/055/large_2x/delicious-omelette-and-fried-food-with-an-aesthetic-appearance-photo.jpg"; width="700px" height="300px"
+<img src="https://static.vecteezy.com/syst.jpg"; width="700px" height="300px"
 </div>
 
 
