--- a/newEgg.html
+++ b/newEgg.html
@@ -1,57 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <link rel="stylesheet" href="tablet.css">
+
 <title>Egg Recipe</title>
+
 <style>
 
- body
-
- {
-   background-color: beige;
-  height: 100%;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-content: center;
+ body {
+   display: flex;
+   flex-direction: column;
  }
 
-.white
-{
+ .white{
    background-color: white;
     width: 100%;
     height: 100%;
     max-width: 1280px;
     margin: 80px;
     border-radius: 20px;
-    padding: 20px;
+    padding:
 }
 
  .eggImg{
-	display: flex;
+  display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-}
+  padding: 20px;
+  box-sizing: border-box;
 
 
-.image {
-border-radius: 20px;
-  width: 100%;
-}
-
-
-
-
-h2{
-  font-family:sans-serif;
-  font-size:1rem;
-  margin:0px;
-  width: 80%
 
 }
 
+ .image {
+   border-radius: 20px;
+   width:100%;
+
+
+ }
+
+  h2{
+     padding: 20px;
+     margin: 0px;
+     font-weight: lighter;
+     font-size:20px;
+}
 .lavender{
-
 background-color:aliceblue;
 width: 1200px;
 height: 140px;
@@ -60,15 +57,14 @@ margin-left: auto;
 margin-right: auto;
 padding-left: 10px;
 padding-right: 10px;
-
+display: flex;
+flex-direction: column;
 }
 
-
-h1
-
-{
+h1{
   font-size:4rem;
   margin: 0px;
+  padding: 20px;
 }
 
 h3{
@@ -79,37 +75,48 @@ h3{
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 10px;
+
   margin: 0;
 
 }
-.li{line-height: 24px;
+.list{
+  line-height: 24px;
 }
 
 h4 {
   font-size:30px ;
-color: maroon;}
-.eggs{padding-left: 100px;
+color: maroon;
+}
+.eggs{
+  padding-left: 100px;
 padding-right: 20px;
 }
+
 .egg-container {
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
+
 }
+
 .description {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 10px;
+  padding: 20px;
 }
 
 </style>
+
+
 </head>
-  <body>
+
+
+<body>
 
 <!-- start main div 1 -->
 
-<div class="main white">
-  <section class="eggimage-section">
+<div class="main white"
     <div class="egg-container">
       <div class="eggImg">
         <img src="image-omelette.jpeg" alt="an omelette" class="image">
@@ -125,6 +132,48 @@ padding-right: 20px;
 
 
   </section>
+
+  <div class="lavender">
+    <p>Preparation time</p>
+    <div class="table">
+      <ul>
+        <li>Total: Approximately 10 minutes</li>
+        <li>Preparation: 5 minutes</li>
+        <li>Cooking: 5 minutes</li>
+    </ul>
+  </p>
+
+
+
+
+
+  </div>
+
+
+
+<!-- end main div -->
+<!--
+  <div class="lavender">
+        <h3>Preparation time</h3>
+        <ul>
+            <div class="list">
+              <li>Total: Approximately 10 minutes</li>
+              <li>Preparation: 5 minutes</li>
+              <li>Cooking: 5 minutes</li>
+            </div>
+        </ul>
+        <h4>Ingredients</h4>
+  </div>
+  <ul>
+    <div class ="eggs">
+      <li>2-3 large eggs </li>
+      <li>Salt, to taste</li>
+      <li>Pepper,to taste</li>
+      <li>1 tablespoon of butter or oil</li>
+      <li>Optional fillings: cheese,diced vegetables,cooked meats,herbs</li>
+    </div>
+  </ul>
+-->
 
 
 
