--- a/newEgg.html
+++ b/newEgg.html
@@ -50,15 +50,14 @@
 }
 .lavender{
 background-color:aliceblue;
-width: 1200px;
+width: 1000px;
 height: 140px;
 border-radius: 20px;
 margin-left: auto;
 margin-right: auto;
 padding-left: 10px;
 padding-right: 10px;
-display: flex;
-flex-direction: column;
+
 }
 
 h1{
@@ -105,7 +104,16 @@ padding-right: 20px;
 	gap: 10px;
   padding: 20px;
 }
+p{
+ color: brown;
+font-size: 20px;
+margin: 0px;
+/*
+font-family:sans-ser;
+*/
 
+font-weight: bold;
+}
 </style>
 
 
