--- a/newEgg.html
+++ b/newEgg.html
@@ -114,6 +114,13 @@ font-family:sans-ser;
 
 font-weight: bold;
 }
+
+.table ul {
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+
+}
 </style>
 
 
@@ -142,20 +149,17 @@ font-weight: bold;
   </section>
 
   <div class="lavender">
-    <p>Preparation time</p>
-    <div class="table">
-      <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
-    </ul>
-  </p>
-
-
-
-
-
+    <p>Preparation time
+      <div class="table">
+        <ul>
+          <li>Total: Approximately 10 minutes</li>
+          <li>Preparation: 5 minutes</li>
+          <li>Cooking: 5 minutes</li>
+        </ul>
+      </div>
+    </p>
   </div>
+
 
 
 
