--- a/newEgg.html
+++ b/newEgg.html
@@ -49,14 +49,15 @@
      font-size:20px;
 }
 .lavender{
-background-color:aliceblue;
+background-color:lightpink;
 width: 1000px;
 height: 140px;
 border-radius: 20px;
 margin-left: auto;
 margin-right: auto;
-padding-left: 10px;
+padding-left: 20px;
 padding-right: 10px;
+padding-top: 30px;
 
 }
 
@@ -138,9 +139,23 @@ font-weight: bold;
 
       </div>
       <div class="description">
-        <h1> Simple Omelette Recipe </h1>
-        <h2>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</h2>
+        <h1> Simple Omelette Recipe
+         </h1>
+        <h2>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+        </h2>
 
+
+        <div class="lavender">
+          <p>Preparation time
+            <div class="table">
+              <ul>
+                <li>Total: Approximately 10 minutes</li>
+                <li>Preparation: 5 minutes</li>
+                <li>Cooking: 5 minutes</li>
+              </ul>
+            </div>
+          </p>
+        </div>
       </div>
 
     </div>
@@ -148,17 +163,8 @@ font-weight: bold;
 
   </section>
 
-  <div class="lavender">
-    <p>Preparation time
-      <div class="table">
-        <ul>
-          <li>Total: Approximately 10 minutes</li>
-          <li>Preparation: 5 minutes</li>
-          <li>Cooking: 5 minutes</li>
-        </ul>
-      </div>
-    </p>
-  </div>
+
+
 
 
 
