--- a/newEgg.html
+++ b/newEgg.html
@@ -46,7 +46,7 @@
      padding: 20px;
      margin: 0px;
      font-weight: lighter;
-     font-size:20px;
+     font-size:16px;
 }
 .lavender{
 background-color:lightpink;
@@ -80,16 +80,17 @@ h3{
 
 }
 .list{
-  line-height: 24px;
-}
+  	padding-left: 93px;
+    display: flex;
+    gap:20px;
+  }
 
-h4 {
-  font-size:30px ;
-color: maroon;
+
+
 }
 .eggs{
-  padding-left: 100px;
-padding-right: 20px;
+  padding-left:;
+padding-right: ;
 }
 
 .egg-container {
@@ -122,6 +123,21 @@ font-weight: bold;
   gap:10px;
 
 }
+
+h4{
+  padding-left: 114px;
+  color: brown;
+  font-weight: bolder;
+  margin: 0px;
+  font-size: 30px;
+}
+.Ingredients{
+  padding-left: 95px;
+
+
+}
+
+
 </style>
 
 
@@ -156,47 +172,35 @@ font-weight: bold;
             </div>
           </p>
         </div>
+        </div>
       </div>
 
-    </div>
 
-
-  </section>
-
-
-
-
-
-
-
-<!-- end main div -->
-<!--
-  <div class="lavender">
-        <h3>Preparation time</h3>
+<div class="ing">
+  <h4>Ingredients</h4>
+     <div class="Ingredients">
         <ul>
-            <div class="list">
-              <li>Total: Approximately 10 minutes</li>
-              <li>Preparation: 5 minutes</li>
-              <li>Cooking: 5 minutes</li>
-            </div>
-        </ul>
-        <h4>Ingredients</h4>
-  </div>
-  <ul>
-    <div class ="eggs">
-      <li>2-3 large eggs </li>
-      <li>Salt, to taste</li>
-      <li>Pepper,to taste</li>
-      <li>1 tablespoon of butter or oil</li>
-      <li>Optional fillings: cheese,diced vegetables,cooked meats,herbs</li>
-    </div>
-  </ul>
--->
-
-
-
-<!-- end main div -->
+           <li>2-3large eggs </li>
+           <li>Salt, to taste</li>
+           <li>Pepper,to taste</li>
+           <li>1 tablespoon of butter or oil</li>
+           <li>Optional fillings: cheese,diced vegetables,cooked meats,herbs</li>
+       </ul>
+     </div>
+    </p>
 </div>
+
+
+
+
+
+
+
+
+  </div>
+
+
+
 
 
 
