--- a/newEgg.html
+++ b/newEgg.html
@@ -8,10 +8,17 @@
 
 <style>
 
- body {
-   display: flex;
-   flex-direction: column;
- }
+
+body
+ {background-color: beige;
+ height: 100%;
+ width: 100vw;
+ display: flex;
+ justify-content: center;
+ align-content: center;
+}
+
+
 
  .white{
    background-color: white;
@@ -43,18 +50,15 @@
  }
 
   h2{
-     padding: 20px;
+
      margin: 0px;
      font-weight: lighter;
      font-size:16px;
 }
 .lavender{
 background-color:lightpink;
-width: 900px;
-height: 140px;
 border-radius: 20px;
-margin-right: auto;
-padding-left: 51px;
+padding: 40px 0px 20px 40px;
 padding-right: 10px;
 padding-top: 30px;
 
@@ -63,21 +67,10 @@ padding-top: 30px;
 h1{
   font-size:4rem;
   margin: 0px;
-  padding: 20px;
-}
-
-h3{
-  color: maroon;
-  font-family: sans-serif;
-  font-size: large;
-  font-weight: bold;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-
-  margin: 0;
 
 }
+
+
 .list{
   	padding-left: 93px;
     display: flex;
@@ -102,55 +95,84 @@ padding-right: ;
 .description {
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
+	gap: 30px;
   padding: 20px;
 }
 p{
- color: brown;
 font-size: 20px;
 margin: 0px;
-/*
-font-family:sans-ser;
-*/
-
 font-weight: bold;
+}
+
+.brown-text {
+	color: brown;
 }
 
 .table ul {
   display: flex;
   flex-direction: column;
   gap:10px;
+  border-bottom: 20px;
 
 }
 
 h4{
-  padding-left: 25px;
-  color: brown;
+
   font-weight: bolder;
   margin: 0px;
   font-size: 30px;
 }
 .ing ul {
-  padding-left: 37px;
+
   display: flex;
   flex-direction: column;
   gap:8px;
 
 }
 
-h5{
-	padding-left: 20px;
-	color: brown;
-	/* font\ weight: bolder; */
-	font-size: 30px;
-	font-weight: bold;
-	margin: 0px;
+.nutrition{
+  color: brown;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.ing {
+ border-bottom: 1px solid #8080807d;
+ padding-bottom: 16px;
+}
+
+.Ingredients {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	padding: 20px;
+}
+.Instructions{
+  border-bottom: 1px solid #80808085;
+}
+
+.nutritional-table p{
+  font-size:10px;
+
 }
 
 
-
+.nutrition-table{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 20px;
+}
+.brown-text.item-quantity {
+	width: 50%;
 }
 
+.item.container {
+	display: flex;
+	justify-content: space-between;
+    border-bottom: 1px solid #80808085;
+    padding-bottom: 20px;
+}
 
 
 </style>
@@ -177,7 +199,7 @@ h5{
 
 
         <div class="lavender">
-          <p>Preparation time
+          <p class="brown-text">Preparation time
             <div class="table">
               <ul>
                 <li>Total: Approximately 10 minutes</li>
@@ -190,7 +212,7 @@ h5{
         </div>
 
         <div class="Ingredients">
-          <h4>Ingredients</h4>
+          <h4 class="brown-text">Ingredients</h4>
           <div class="ing">
           <ul>
              <li>2-3large eggs </li>
@@ -205,34 +227,46 @@ h5{
 
 
 <div class="Instructions">
-     <h5>Instructions</h5>
+     <h4 class="brown-text">Instructions</h4>
   <ol>
-     <li>Beat the eggs:In a bowl,beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a table spoonof water or milk for a fulffier texture.</li>
-     <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil .</li>
-     <li>Cook the omelette:Once the butter is melted bubbling,pour in the eggs.Tilt the pan to ensure the eggs evenly coat the surface. </li>
-     <li>Add fillings (optional):When the eggs begin to set at the edges but are still slightly runny in the middle,sprinkle your chosen filling over one half of the omelette.</li>
-     <li>Fold and serve:As the omelette continues to cook carefully lift one edge and fold it over the fillings . Let it cook for anoyher minute, then slide it onto a plate .</li>
-    <li>Enjoy:Serve hot ,with additional salt and pepper if needed.</li>
+     <li><strong>Beat the eggs:</strong>In a bowl,beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a table spoonof water or milk for a fulffier texture.</li>
+     <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil .</li>
+     <li><strong>Cook the omelette:</strong>Once the butter is melted bubbling,pour in the eggs.Tilt the pan to ensure the eggs evenly coat the surface. </li>
+     <li><strong>Add fillings (optional):</strong>When the eggs begin to set at the edges but are still slightly runny in the middle,sprinkle your chosen filling over one half of the omelette.</li>
+     <li><strong>Fold and serve:</strong>As the omelette continues to cook carefully lift one edge and fold it over the fillings . Let it cook for anoyher minute, then slide it onto a plate .</li>
+    <li><strong>Enjoy:</strong>Serve hot ,with additional salt and pepper if needed.</li>
   </ol>
 </div>
 
 
-<p> Nutrition</p>
+<p class="nutrition">Nutrition</p>
+<div class="nutrition-table">
+
+The table below shows nutritional values per serving without the additional fillings.
+
+  <div class="item container">
+    <div class="item-name">Calories</div>
+      <div class="brown-text item-quantity">277kca</div>
+
+  </div>
+
+  <div class="item container">
+    <div class="item-name">Carbs</div>
+      <div class="brown-text item-quantity">0g</div>
+
+  </div>
 
 
+  <div class="item container">
+    <div class="item-name">Protein</div>
+      <div class="brown-text item-quantity">20g</div>
+
+  </div>
 
 
-
-</div>
-
-
-
-
-
-
-
-
-
+  <div class="item container">
+    <div class="item-name">Fat</div>
+      <div class="brown-text item-quantity">20g</div>
 
   </div>
 
@@ -251,16 +285,10 @@ h5{
 
 
 
+</div>
 
 
-
-
-
-
-
-
-
-
+</div>
 
 
 
