--- a/newEgg.html
+++ b/newEgg.html
@@ -35,7 +35,7 @@ body
 	justify-content: center;
 	align-items: center;
 	width: 100%;
-  padding: 20px;
+  padding: 50px;
   box-sizing: border-box;
 
 
@@ -53,7 +53,7 @@ body
 
      margin: 0px;
      font-weight: lighter;
-     font-size:16px;
+     font-size:18px;
 }
 .lavender{
 background-color:lightpink;
@@ -96,7 +96,7 @@ padding-right: ;
 	display: flex;
 	flex-direction: column;
 	gap: 30px;
-  padding: 20px;
+  padding: 50px;
 }
 p{
 font-size: 20px;
@@ -106,6 +106,7 @@ font-weight: bold;
 
 .brown-text {
 	color: brown;
+  font-weight: bold;
 }
 
 .table ul {
@@ -145,10 +146,11 @@ h4{
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
-	padding: 20px;
+	padding: 50px;
 }
 .Instructions{
   border-bottom: 1px solid #80808085;
+  padding-bottom: 20px;
 }
 
 .nutritional-table p{
@@ -246,7 +248,7 @@ The table below shows nutritional values per serving without the additional fill
 
   <div class="item container">
     <div class="item-name">Calories</div>
-      <div class="brown-text item-quantity">277kca</div>
+      <div class="brown-text item-quantity">277kcal</div>
 
   </div>
 
